	+------------+
	| Commando   |
	|        418 |
	+------------+

+ 01/04/14 [0.1] (idée le 31/03/14)
-----------------------------------
 -> Implémentation d'un plateau de jeu basique, sans obstacles
 -> Modèle du personnage et des projectiles
 -> Adaption au "multijoueur" (1 humain + IAs)
 -> Gestion du clavier (multitouches)
 -> Gestion de la souris
 -> Implémentation de la théière céleste

+ 03/04/14
----------
 -> Uniformisation de la vitesse de déplacement (dépend maintenant du temps et
 non de la vitesse de l'ordinateur)
 -> Réduction de la taille du personnage afin qu'il tienne dans une seule case
 -> Ajout des obstacles, de leur carte et de leur hitbox

+ 20/04/14 (Easter update)
----------
 -> Ajout d'une fonction de création de labyrinthe
 -> Modification du positionnement des obstacles
 -> Réduction du terrain (pour limiter les lags et rendre le jeu finissable)