@@ -6,5 +6,6 @@ void display(void);
 void anim(void);
 void getDeltaTime(void);
 void calcFPS();
+void win();
 
 #endif
