@@ -9,10 +9,10 @@ void goForward(player * p){
     float dx = cos(p1.angle) * MOV_UNIT * deltaMoment;
     float dz = sin(p1.angle) * MOV_UNIT * deltaMoment;
 
-    if (p->x + dx < X_MIN || p->x + dx > X_MAX || !isFree(floor(p->x + dx + ((dx > 0)?1:-1) * X_HITBOX), floor(p->z))){
+    if ((p->x + dx < X_MIN || p->x + dx > X_MAX || !isFree(floor(p->x + dx + ((dx > 0)?1:-1) * X_HITBOX), floor(p->z))) && !kTab[NOCLIP_BIT]){
 	dx = 0;
     }
-    if (p->z + dz < Z_MIN || p->z + dz > Z_MAX || !isFree(floor(p->x), floor(p->z + dz + ((dz > 0)?1:-1) * Z_HITBOX))){
+    if ((p->z + dz < Z_MIN || p->z + dz > Z_MAX || !isFree(floor(p->x), floor(p->z + dz + ((dz > 0)?1:-1) * Z_HITBOX))) && !kTab[NOCLIP_BIT]){
 	dz = 0;
     }
     p->x += dx;
@@ -25,10 +25,10 @@ void goBackward(player * p){
     float dx = cos(p1.angle) * MOV_UNIT * deltaMoment;
     float dz = sin(p1.angle) * MOV_UNIT * deltaMoment;
 
-    if (p->x - dx < X_MIN || p->x - dx > X_MAX || !isFree(floor(p->x - dx - ((dx > 0)?1:-1) * X_HITBOX), floor(p->z))){
+    if ((p->x - dx < X_MIN || p->x - dx > X_MAX || !isFree(floor(p->x - dx - ((dx > 0)?1:-1) * X_HITBOX), floor(p->z))) && !kTab[NOCLIP_BIT]){
 	dx = 0;
     }
-    if (p->z - dz < Z_MIN || p->z - dz > Z_MAX || !isFree(floor(p->x), floor(p->z - dz - ((dz > 0)?1:-1) * Z_HITBOX))){
+    if ((p->z - dz < Z_MIN || p->z - dz > Z_MAX || !isFree(floor(p->x), floor(p->z - dz - ((dz > 0)?1:-1) * Z_HITBOX))) && !kTab[NOCLIP_BIT]){
 	dz = 0;
     }
     p->x -= dx;
